2010-08-09  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/stats/lnorm.h: Added d-p-q (lnorm|weibull|logis|f)
	generated by the script

	* inst/include/Rcpp/vector/Vector.h: further dispatch to allow generators
	to be passed to constructors of Vector
	
	* inst/include/Rcpp/traits/has_iterator.h: new SFINAE detection of 
	generators
	
	* inst/include/Rcpp/Generator.h : base template class for generators
	
2010-08-06  Douglas Bates  <bates@stat.wisc.edu>

	* unitTests/runit.stats.R: Corrected instances of numeric
	arguments passed as integers, deleted tests for binomial with
	fixed parameter values.

2010-08-06  Romain Francois <romain@r-enthusiasts.com>

	* ../scripts/stats.R: R script to generate the template code for dpq functions

	* include/Rcpp/stats/unif.h: Added d-p-q unif and tests

	* include/Rcpp/stats/gamma.h: Added d-p-q gamma and tests

	* include/Rcpp/stats/chisq.h: Added d-p-q chisq

2010-08-05  Douglas Bates  <bates@stat.wisc.edu>

	* include/Rcpp/stats/beta.h: Added d-p-q beta and tests

	* include/Rcpp/stats/binom.h: Added pbinom and qbinom,
	and tests of same in runit.stats.R

	* include/Rcpp/stats/pois.h: Added ppois and qpois (plus
	tests in runit.stats.R).

	* include/Rcpp/stats/norm.h: Added pnorm and qnorm and
	corresponding tests in unitTests/runit.stats.R

2010-08-05  Dirk Eddelbuettel  <deddelbuettel@wtchi-stat-l2.wolve.com>

	* inst/include/Rcpp/stats/norm.h: Added dnorm sugar function
	* inst/include/Rcpp/stats/t.h: Added dt, pt, qt sugar functions
        * inst/include/unitTests/runit.stats.R: Added corresponding tests

2010-08-05  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/sugar/functions/seq_along.h: added seq(int,int) to
	mimic the R syntax : seq( 0, 5 )

	* inst/include/Rcpp/sugar/Range.h: fixed compiler confusion

	* inst/include/Rcpp/stats: new sugar functions Rcpp::stats::dpois and
	Rcpp::stats::dbinom inspired by Richard Chandler post on Rcpp-devel: