@@ -1,3 +1,7 @@
+2010-08-10  Romain Francois <romain@r-enthusiasts.com>
+
+	* inst/include/Rcpp/stats/random/rnorm.h: Added rnorm and rnorm_
+
 2010-08-09  Romain Francois <romain@r-enthusiasts.com>
 
 	* inst/include/Rcpp/stats/lnorm.h: Added d-p-q (lnorm|weibull|logis|f)
